objects/icBase__Project2__c.object
<CustomObject>
    <description>A customer project</description>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF( Closed__c  = False,  Today()- DATEVALUE(CreatedDate)  , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>updated by workflow when the project status is updated to Completed the checkbox is set to true</inlineHelpText>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <inlineHelpText>brief description of what you are waiting on</inlineHelpText>
        <label>Next Step</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Need Now</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Need Soon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Need Eventually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>icBase__Description__c</fullName>
        <inlineHelpText>A project is an implementation phase for Salesforce that can deliver a set of business requirements. A phase that can be identified, planned and deployed as a distinct set</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>icBase__Ideal_Completion_Date__c</fullName>
        <inlineHelpText>Your ideal project completion date or deadline</inlineHelpText>
        <label>Ideal Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>icBase__Status__c</fullName>
        <description>The status of the project</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Working on objectives</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Working on solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requesting Help from Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred to Another Dept</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Implementation Project</label>
    <listViews>
        <fullName>icBase__Active_Projects</fullName>
        <columns>NAME</columns>
        <columns>icBase__Ideal_Completion_Date__c</columns>
        <columns>icBase__Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Active Projects</label>
    </listViews>
    <listViews>
        <fullName>icBase__Cancelled_Projects</fullName>
        <columns>NAME</columns>
        <columns>icBase__Ideal_Completion_Date__c</columns>
        <columns>icBase__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>icBase__Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>Cancelled Projects</label>
    </listViews>
    <listViews>
        <fullName>icBase__Completed_Projects</fullName>
        <columns>NAME</columns>
        <columns>icBase__Ideal_Completion_Date__c</columns>
        <columns>icBase__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>icBase__Status__c</field>
            <operation>equals</operation>
            <value>Implementation Complete</value>
        </filters>
        <label>Completed Projects</label>
    </listViews>
    <nameField>
        <label>Project Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Implementation Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>